--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-11-12">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-11-12-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/c0fded8a01dfbc7be86e79e49ac0a627.webp" alt="11月12日→22.1M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-11-12-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">11月12日→22.1M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了日本、新加坡、美国、加拿大、韩国、欧洲、香港等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-11-11">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-11-11-free-clash-subscribe.htm" class="xcblog-blog-url">
@@ -221,20 +235,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-11-02">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-11-2-free-v2ray.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/cf4b7d70d0b73f0bfc03a06c4aff020d.webp" alt="11月2日→18.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-11-2-free-v2ray.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">11月2日→18.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了欧洲、韩国、香港、美国、日本、新加坡、加拿大等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-27.htm">27</a></li><li><a href="/free-nodes/page-28.htm">28</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-5-13-shadowrocket-node.htm" title="5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-30-clash-v2ray-ss-ssr.htm" title="4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-18-clash-v2ray-ss-ssr.htm" title="9月18日→20M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">9月18日→20M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-10-clash-node-daily-updates.htm" title="8月10日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">8月10日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-29-node-share.htm" title="8月29日→18.1M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">8月29日→18.1M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-20-free-high-speed-nodes.htm" title="11月20日→19M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">11月20日→19M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-27-node-share.htm" title="3月27日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接">3月27日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-21-clash-node-daily-updates.htm" title="8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-19-clash-v2ray-ss-ssr.htm" title="5月19日→19.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">5月19日→19.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-11-clash-node.htm" title="10月11日→19.4M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">10月11日→19.4M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-11-clash-windows.htm" title="7月11日→22.5M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">7月11日→22.5M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-23-clash-node.htm" title="6月23日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">6月23日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-8-free-ssr-subscribe.htm" title="7月8日→20.7M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">7月8日→20.7M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-31-shadowrocket-node.htm" title="8月31日→20M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">8月31日→20M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-23-free-clash.htm" title="5月23日→22.6M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">5月23日→22.6M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-29-clash-node.htm" title="3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接">3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-24-free-ssr-subscribe.htm" title="5月24日→20.8M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月24日→20.8M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-10-27-free-clash-subscribe.htm" title="10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm" title="3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接">3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
