--- a/free-nodes/page-25.htm
+++ b/free-nodes/page-25.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-04-06">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-4-6-free-clash.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7f7309e6b17f9cbb639a778e73fc546c.webp" alt="4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-4-6-free-clash.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了新加坡、加拿大、美国、欧洲、日本、香港、韩国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-04-05">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-4-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
@@ -221,20 +235,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-03-27">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-3-27-node-share.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/819f1aade82ef2f65ccdf55abb283a16.webp" alt="3月27日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-3-27-node-share.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">3月27日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了香港、日本、欧洲、韩国、新加坡、加拿大、美国等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-24.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-20.htm">20</a></li><li><a href="/free-nodes/page-21.htm">21</a></li><li><a href="/free-nodes/page-22.htm">22</a></li><li><a href="/free-nodes/page-23.htm">23</a></li><li><a href="/free-nodes/page-24.htm">24</a></li><li class="active"><span>25</span></li><li><a href="/free-nodes/page-26.htm">26</a></li><li><a href="/free-nodes/page-27.htm">27</a></li><li><a href="/free-nodes/page-28.htm">28</a></li> <li><a href="/free-nodes/page-26.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-20-free-subscribe-node.htm" title="4月20日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接">4月20日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-12-free-high-speed-nodes.htm" title="10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-13-clash-v2ray-ss-ssr.htm" title="6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-30-node-share-links.htm" title="8月30日→19M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">8月30日→19M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-9-node-share.htm" title="8月9日→18.1M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">8月9日→18.1M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-10-clash-node-daily-updates.htm" title="9月10日→20.7M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">9月10日→20.7M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-23-clash-node-daily-updates.htm" title="4月23日→20.8M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接">4月23日→20.8M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-22-free-v2ray-subscribe.htm" title="11月22日→19.4M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">11月22日→19.4M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-31-free-node-subscribe.htm" title="3月31日→18.4M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接">3月31日→18.4M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-3-free-v2ray-subscribe.htm" title="3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接">3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-24-clash-windows.htm" title="4月24日→22.7M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接">4月24日→22.7M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-19-clash-v2ray-ss-ssr.htm" title="5月19日→19.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">5月19日→19.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-10-free-clash-subscribe.htm" title="4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-20-free-v2ray-subscribe.htm" title="10月20日→20M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">10月20日→20M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-27-free-v2ray.htm" title="11月27日→18M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">11月27日→18M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-10-free-node-subscribe-links.htm" title="5月10日→21M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址">5月10日→21M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-13-free-ssr-subscribe.htm" title="3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-25-free-high-speed-nodes.htm" title="8月25日→22.5M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">8月25日→22.5M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-15-free-ssr-node.htm" title="9月15日→22.3M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">9月15日→22.3M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-3-free-ssr-node.htm" title="9月3日→18.1M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">9月3日→18.1M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
